trying to push from a branch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         
 
-            <h2 class="heading">Users Table</h2>
+            <h2 class="heading">Users Data</h2>
 
          <!-- SEARCH BOX SECTION -->
          <section class="search-section">
